github/ci/services/prometheus-stack/manifests/stack/production-control-plane/thanos-receive-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-receive
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: "monitoring/thanos-receive-auth"
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  tls:
  - hosts:
    - thanos-receive.ci.kubevirt.io
    secretName: thanos-receive-tls
  rules:
  - host: thanos-receive.ci.kubevirt.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thanos-receive
            port:
              number: 19291
